codingchallenge14/style.css
body {
	background-image: linear-gradient(to right, #06beb6, #48b1bf);
	font-family: "Verdana", sans-serif;
	font-size: 1.5rem;
}

#playmat {
	margin-left: 10%;
	margin-right: 10%;
	display: grid;
	grid-gap: 20px;
	grid-template-columns: repeat(4, 1fr); 
}

.infobar {
	text-align: center;
	margin: 1.5% 10%;
	padding: 5px 5px;
	display: grid;
	grid-gap: 10px;
	grid-template-columns: repeat(3, 1fr); 
}

.scene {
	width: 100%;
	height: 150px;
	perspective: 600px;
}

.card {
	width: 90%;
	height: 100%;
	position: relative;
	transition: transform 1s;
	transform-style: preserve-3d;
}

.card:hover {
	cursor: pointer;
}

.card__face {
	border-radius: 5px;
	box-shadow: 5px 8px 8px;
	position: absolute;
	height: 100%;
	width: 100%;
	backface-visibility: hidden;
}

.card__face--front {
	background-color: #333333;
}

.card__face--back {
	background-color: white; 
	transform: rotateY(180deg);
}

.card.is-flipped {
	transform: rotateY(180deg);
}

.card.stay-flipped {
	transform: rotateY(180deg);
}

img{
	height: 1.5rem;
	width: 1.5rem;
}

img:hover {
	transform: rotate(-1turn);
	transition-duration: .85s;
	cursor: pointer;
}

.image1 {
	background-image: url("https://image.flaticon.com/icons/svg/156/156171.svg");
	background-size: contain;
	background-repeat: no-repeat;
	background-position: 50% 50%;
}

.image2 {
	background-image: url("https://image.flaticon.com/icons/svg/156/156145.svg");
	background-size: contain;
	background-repeat: no-repeat;
	background-position: 50% 50%;
}

.image3 {
	background-image: url("https://image.flaticon.com/icons/svg/156/156155.svg");
	background-size: contain;
	background-repeat: no-repeat;
	background-position: 50% 50%;
}

.image4 {
	background-image: url("https://image.flaticon.com/icons/svg/156/156161.svg");
	background-size: contain;
	background-repeat: no-repeat;
	background-position: 50% 50%;
}

.image5 {
	background-image: url("https://image.flaticon.com/icons/svg/156/156146.svg");
	background-size: contain;
	background-repeat: no-repeat;
	background-position: 50% 50%;
}

.image6 {
	background-image: url("https://image.flaticon.com/icons/svg/156/156184.svg");
	background-size: contain;
	background-repeat: no-repeat;
	background-position: 50% 50%;
}

.image100 {}
.image200 {}
.image300 {}
.image400 {}
.image500 {}
.image600 {}

